# ibert

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONEPACKING.md  CONTRIBUTING.md  DATA_SCALING_GUIDE.md  DESIGN.md  DOCUMENTATION.md  IMPLEMENTATION_SUMMARY.md  LOCAL_MODEL_SETUP.md  MULTITASK_DATA_DESIGN.md  MULTITASK_MINING.md  QUICKSTART.md  README.md  SEM_DESIGN.md  TESTING.md  TROUBLESHOOTING.md  check_training.sh  config.yaml.example  justfile  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_training.py  test_mps.py  train_ibert.py
.github/workflows/: ci.yml
.serena/: project.yml
configs/: semgrep_rules.yaml
data/: README.md
data/corpus/: code_completion_test.jsonl  code_completion_train.jsonl  code_completion_val.jsonl  corpus_statistics.json  error_solutions_test.jsonl  error_solutions_train.jsonl  error_solutions_val.jsonl  function_docs_test.jsonl  function_docs_train.jsonl  function_docs_val.jsonl  ibis_to_sql_test.jsonl  ibis_to_sql_train.jsonl  qa_pairs_test.jsonl  qa_pairs_train.jsonl  qa_pairs_val.jsonl
data/docs/: crawl_summary.json  ibis_docs.jsonl
data/multitask/: code_completion.jsonl  documentation.jsonl  error_resolution.jsonl  ibis_to_sql.jsonl  qa.jsonl  sql_to_ibis.jsonl  train_complete.jsonl
data/repo/: classes.jsonl  docstrings.jsonl  error_patterns.jsonl  functions.jsonl  processing_summary.json  test_examples.jsonl
scripts/: generate_all_data.sh
src/data/: cone_packer.py  corpus_builder.py  doc_crawler.py  ibis_crawler.py  repo_processor.py
src/datagen/: README.md  concatenate_datasets.py
src/datagen/augmentation/: augmenter.py
src/datagen/mining/: github_miner.py  ibis_doc_extractor.py  multitask_miner.py  repo_urls.txt
src/datagen/multitask/: generate_multitask_data.py  validate_multitask_data.py
src/datagen/multitask/templates/code_completion/: 01_filter_completion.yaml  02_aggregation_completion.yaml  03_join_completion.yaml  04_window_completion.yaml
src/datagen/multitask/templates/documentation/: 01_filter_functions.yaml  02_aggregation_functions.yaml  03_join_functions.yaml  04_window_functions.yaml  05_string_temporal_functions.yaml
src/datagen/multitask/templates/error_resolution/: 01_type_errors.yaml  02_syntax_errors.yaml
src/datagen/multitask/templates/ibis_to_sql/: 01_filter_to_sql.yaml  02_aggregation_to_sql.yaml
src/datagen/multitask/templates/qa/: 01_basic_operations.yaml  02_aggregation_qa.yaml  03_joins_qa.yaml
src/datagen/sql2ibis/: FINDINGS.md  README.md  __init__.py  generate_augmented_dataset.py  generate_dataset.py  justfile  pyproject.toml  test_ibis_sql.py
src/datagen/sql2ibis/config/: dialects.yaml  settings.yaml
src/datagen/sql2ibis/eval/: fixtures.py  validator.py
src/datagen/sql2ibis/template_loader/: __init__.py  expander.py  loader.py
src/datagen/sql2ibis/templates/: 01_select_where.yaml  02_groupby_agg.yaml  03_filter_groupby.yaml  04_order_limit.yaml  05_join.yaml  06_having.yaml  07_case_when.yaml  08_window.yaml  09_distinct.yaml  10_null_handling.yaml  11_temporal.yaml  12_selectors.yaml  13_collections.yaml  14_udf_scalar_builtin.yaml  15_udf_agg_builtin.yaml  16_advanced_aggregations.yaml  17_string_operations.yaml  18_subqueries.yaml  19_set_operations.yaml  20_advanced_joins.yaml  21_advanced_temporal.yaml  22_advanced_window.yaml  23_conditional_aggregations.yaml  24_type_casting.yaml  25_numeric_operations.yaml  26_complex_filters.yaml  27_projection_operations.yaml  28_sorting_limiting.yaml  29_join_aggregation.yaml  30_groupby_variations.yaml  31_string_patterns.yaml  32_mixed_operations.yaml  33_boolean_operations.yaml  34_temporal_filters.yaml  35_aggregation_edge_cases.yaml  36_expression_combinations.yaml  37_param_filters.yaml  38_param_aggregations.yaml  39_param_temporal.yaml  40_param_multi_filter.yaml  (+2 more)
src/datagen/sql2ibis/translator/: __init__.py  parser.py  types.py
src/datagen/sql2ibis/utils/: __init__.py  io.py  log.py
src/evaluation/: task_evaluator.py
src/ibert/: __init__.py  cli_utils.py  exceptions.py  logging.py
src/ibert/config/: __init__.py  config.py
src/ibert/models/: __init__.py  base.py  factory.py  mistral_model.py
src/ibert/tasks/: __init__.py  base.py  code_completion.py  documentation.py  error_resolution.py  ibis_to_sql.py  qa.py  sql_to_ibis.py
src/models/: devstral_lora.py
src/training/: multi_task_trainer.py
tests/: README.md
tests/datagen/: test_augmenter.py  test_concatenate_datasets.py
tests/datagen/mining/: test_github_miner.py  test_ibis_doc_extractor.py
tests/datagen/multitask/: test_generate_multitask_data.py  test_multitask_miner.py  test_validate_multitask_data.py
tests/datagen/sql2ibis/: test_generate_dataset_scripts.py  test_template_loader.py  test_translator.py  test_utils.py  test_validator.py
tests/ibert/: __init__.py  conftest.py  test_cli_utils.py  test_config.py
tests/ibert/models/: test_factory.py
tests/ibert/tasks/: __init__.py  test_code_completion.py  test_documentation.py  test_error_resolution.py  test_ibis_to_sql.py  test_qa.py  test_sql_to_ibis.py
